--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Learning Cam2</string>
     <string name="permission_request">We need camera permission</string>
     <string name="camera_error">This cameraDevice doesn\'t support Camera2 API</string>
+    <string name="pictures_directory">IC</string>
 </resources>
